modied home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
         <div class="text-center">
             <button class="btn btn-primary">Contact Us</button>
             <p>
-                &copy; Copyright 2024 Jovian
+                &copy; Copyright 2024 Jovian Joy
             </p>
         </div>
     </div>
