--- a/templates/home.html
+++ b/templates/home.html
@@ -36,7 +36,7 @@
         <div class="text-center">
             <button class="btn btn-primary">Contact Us</button>
             <p>
-                &copy; Copyright 2024 Jovian Joy
+                &copy; Copyright 2024 Jovian
             </p>
         </div>
     </div>
