--- a/templates/home.html
+++ b/templates/home.html
@@ -10,23 +10,29 @@
             height: 360px;
             width: 100%;
             object-fit: cover;
+            margin-bottom: 16px;
         }
     </style>
 </head>
 <body>
     {% include 'nav.html' %}
+    <img class="img-fluid" id="banner" src="http://127.0.0.1:5000/static/jovian-banner.avif" alt="Jovian Banner" height="400" width="1250">
+
     <div class = "container">
         <h1 class="text-center mt-2 mb-4">
-            Jovian Careers
+            {{company_name}} Careers
         </h1>
-        <img class="img-fluid" id="banner" src="http://127.0.0.1:5000/static/jovian-banner.avif" alt="Jovian Banner" height="400" width="1250">
-        <h2 class="text-center mt-3 mb-2">
-            About {{company_name}}
-        </h2>
-        <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione architecto facilis sunt amet iusto maiores ad! Impedit, optio. Quae aspernatur temporibus dolorum omnis nulla sint velit beatae eius a.
-        Enim eos voluptatibus deserunt doloremque voluptatum deleniti sint atque sapiente, perferendis nesciunt quod fugiat eligendi! Minima cumque enim, pariatur ea aperiam eum, hic culpa maiores unde quae dolores harum alias!
-        </p>
+        <div class="row" style="margin-bottom: 16px;">
+            <div class="col-md-6">
+                <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione architecto facilis sunt amet iusto maiores ad! Impedit, optio. Quae aspernatur temporibus dolorum omnis nulla sint velit beatae eius a.
+                Enim eos voluptatibus deserunt doloremque voluptatum deleniti sint atque sapiente, perferendis nesciunt quod fugiat eligendi! Minima cumque enim, pariatur ea aperiam eum, hic culpa maiores unde quae dolores harum alias!
+                </p>
+            </div>
+            <div class="d-none d-md-block col-md-6">
+            <img src="/static/people.avif" alt="" style="height: 300px; border-radius: 4px;">
+        </div>
+        </div>
         <h2 class="text-center mt-3 mb-2">Open Positions</h2>
         <div>
             {% for job in jobs %}
@@ -35,10 +41,8 @@
         </div>
         <div class="text-center">
             <button class="btn btn-primary">Contact Us</button>
-            <p>
-                &copy; Copyright 2024 Jovian
-            </p>
         </div>
     </div>
+    {% include 'footer.html' %}
 </body> 
 </html>
