--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,22 +1,9 @@
- <div class="container" style="background-color: whitesmoke;">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-        </a>
-
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-            <li><a href="#" class="nav-link px-2 text-secondary">Features</a></li>
-            <li><a href="#" class="nav-link px-2 text-secondary">About</a></li>
-        </ul>
-
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-            <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
-        </form>
-
-        <div class="text-end">
-            <button type="button" class="btn btn-outline-light me-2" style="color: #3d3d3d;">Login</button>
-            <button type="button" class="btn btn-secondary">Sign-up</button>
-        </div>
+  <nav class="navbar bg-body-tertiary shadow-sm fixed-top bg-white">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="/static/logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        Jovian
+      </a>
     </div>
-</div>
+  </nav>
+  <div style="height: 56px;"></div>
