--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
             {% endfor %}
         </div>
         <div class="text-center">
-            <button class="btn btn-primary">Contact Us</button>
+            <a href="mailto:joy.isaac@aun.edu.ng?subject=Question%20about%20Job%20Openings&body=Name%20of%20Applicant%3A%20%3Cyour%20name%3E%0D%0A%0D%0AMy%20question%3A%20%3Cyour%20question%20here%3E" class="btn btn-primary">Contact Us</a>
         </div>
     </div>
     {% include 'footer.html' %}
