--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,5 +5,5 @@
       <li class="nav-item"><a href="https://netflix.com/ng" class="nav-link px-2 text-body-secondary">Events</a></li>
       <li class="nav-item"><a href="https://khanacademy.org" target="_blank" class="nav-link px-2 text-body-secondary">About</a></li>
     </ul>
-    <p class="text-center text-body-secondary">&copy; 2024 Company, Inc</p>
+    <p class="text-center text-body-secondary">&copy; 2024 Jovian, Inc</p>
 </footer>
