--- a/templates/home.html
+++ b/templates/home.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Jovian Careers</title>
-    <style>
-        #banner {
-            height: 360px;
-            width: 100%;
-            object-fit: cover;
-            margin-bottom: 16px;
-        }
-    </style>
+    {% include 'bootstrap.html' %}
+    
 </head>
 <body>
     {% include 'nav.html' %}
-    <img class="img-fluid" id="banner" src="http://127.0.0.1:5000/static/jovian-banner.avif" alt="Jovian Banner" height="400" width="1250">
+    {% include 'banner.html' %}
 
     <div class = "container">
         <h1 class="text-center mt-2 mb-4">
-            {{company_name}} Careers
+            Jovian Careers
         </h1>
         <div class="row" style="margin-bottom: 16px;">
             <div class="col-md-6">
