--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -13,6 +13,6 @@
         {% endif %}
     </div>
     <div class="col-3">
-        <a href="mailto:joy.isaac@aun.edu.ng?subject=Application%20for%20{{job['title']}}&body=Name%20of%20Applicant%3A%20%3Cyour%20name%3E%0D%0A%0D%0AApplicant's%20resume%3A%20%3Cyour%20resume%20link%3E%0D%0A%0D%0AApplicant's%20LinkedIn%20profile%3A%20%3Cyour%20LinkedIn%20profile%20link%3E" type="button" class="btn btn-outline-primary">Apply</a>
+        <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary">Apply</a>
     </div>
 </div>
